updated side-navbar to position relative added spacing to the top, also update nav-container to have a width of 340px (and position fixed)

--- a/src/components/sidenav/SideNav.scss
+++ b/src/components/sidenav/SideNav.scss
@@ -2,9 +2,18 @@
 
 div {
     &.side-navbar {
+        position: relative;
+        top:60px;
         .TikTok-Button {
             height: 48px;
             font-weight: 600;
+        }
+        .nav-container {
+            width: 340px;
+            height:100%;
+            padding-top: 20px;
+            overflow-y:auto;
+            position: fixed;
         }
         span {
             &.nav-wrapper {
